# lll-buffed

./: .gitignore  .gitmodules  AGENTS.md  BUFFER_STATE_MACHINE.md  CLAUDE.md  GEMINI.md  README.md  platformio.ini
.codex/: AGENTS.md  setup_script.sh
boards/: fly_buffer_f072c8.json
klipper/: pyproject.toml
klipper/e2e-test/: Dockerfile  avrsim_dual.py  klipper.elf  supervisord.conf
klipper/e2e-test/klipper-pkg/: README.md  hatch_build.py  klipper-fw.config  pyproject.toml
klipper/extras/: lll_buffer.py
lib/buffer/: buffer.cpp  buffer.h  buffer.tpp  buffer_hardware.h  buffer_logic.h  buffer_logic.hpp  hardware_iface.h  hardware_impl.h  tiny_printf.cpp  tiny_printf.hpp
scripts/: i2c_cli.py  i2c_cli.sh  switch_to_dfu.py
src/: buffer_hardware.hpp  main.cpp
src/buffer/: buffer_hardware.hpp  dfu.cpp  dfu.hpp  main.cpp
src/simulator/: main.cpp  simulator_hardware.cpp  simulator_hardware.hpp
test/: hardware_mock.h  hardware_mock.hpp  test_buffer_logic.cpp  test_tiny_printf.cpp
toolchains/system-avr-gcc/: package.json
variants/F072C8/: startup_FLY_BUFFER_F072C.S  variant_FLY_BUFFER_F072Cx.h
