[project]
name = "ratos-klippy"
version = "0.1.0"
description = "RatOS Klippy bundled into a Python package"
requires-python = ">=3.9,<3.12"
classifiers = ["Private :: Do Not Upload"]
dynamic = ["dependencies"]

[tool.hatch.metadata.hooks.requirements_txt]
files = ["ratos-klipper/scripts/klippy-requirements.txt"]

[project.scripts]
klippy = "klippy:main"
klipper-console = "console:main"
klipper-parsedump = "parsedump:main"

[build-system]
requires = ["hatchling", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
sources = ["ratos-klipper/klippy"]
include = ["ratos-klipper/klippy/*"]

[tool.hatch.build.targets.wheel]
sources = ["ratos-klipper/klippy"]
include = ["ratos-klipper/klippy/*"]

[tool.hatch.metadata.hooks.custom]
path = "hatch_build.py"
